[gd_scene load_steps=6 format=3 uid="uid://dqv6ungkyi56p"]

[ext_resource type="Script" uid="uid://cijbarc8v6s50" path="res://Scripts/Enemies/enemy_3.gd" id="1_dmkc8"]
[ext_resource type="Texture2D" uid="uid://l7yvpdfs041t" path="res://icon.svg" id="1_ipo15"]
[ext_resource type="Script" uid="uid://cny4lfu1itqhr" path="res://Scripts/Enemies/enemy_3_area.gd" id="3_bhx10"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vxs2d"]
radius = 64.0312

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vr8ig"]
size = Vector2(50, 86)

[node name="Enemy3" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
script = ExtResource("1_dmkc8")

[node name="Enemy3_sprite" type="Sprite2D" parent="."]
position = Vector2(0, -52)
texture = ExtResource("1_ipo15")
flip_v = true

[node name="Enemy3_area" type="Area2D" parent="." groups=["Enemy"]]
script = ExtResource("3_bhx10")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy3_area"]
position = Vector2(0, -52)
shape = SubResource("CircleShape2D_vxs2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(15, -33)
shape = SubResource("RectangleShape2D_vr8ig")

[node name="Enemy3_attack_cd" type="Timer" parent="."]

[connection signal="area_entered" from="Enemy3_area" to="Enemy3_area" method="_on_area_entered"]
[connection signal="timeout" from="Enemy3_attack_cd" to="Enemy3_area" method="_on_enemy_3_attack_cd_timeout"]
